--- a/css/style.css
+++ b/css/style.css
@@ -5,49 +5,160 @@ body {
   text-transform: uppercase;
 }
 
-@font-face {
-    font-family: "PT Sans";
-    src: url("fonts/ptsans.woff2") format("woff2");
-    src: url("fonts/ptsansbold.woff2") format("woff2");
-    src: url("fonts/ptsans.woff") format("woff");
-    src: url("fonts/ptsansbold.woff") format("woff");
-}
-
 body {
   padding: 10px;
   font-family: "PT Sans", sans-serif, serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  background: rgba(154, 224, 250, 1);
 }
 
 main {
-  width: 1200px;
+
 }
 
 .visually-hidden {
   display: none;
 }
 
- ul {
-   margin: 20px 0;
-   padding: 0;
-   list-style: none;
- }
+ul {
+  margin: 20px 0;
+  padding: 0;
+  list-style: none;
+}
 
- h1 {
-   margin: 36px 0;
-   font-size: 36px;
-   line-height: 42px;
- }
+h1 {
+  margin: 28px 0;
+  font-size: 28px;
+  line-height: 34px;
+}
 
- h2 {
-   margin: 24px 0;
-   font-size: 24px;
-   line-height: 28px;
- }
+h2 {
+  margin: 16px 0;
+  font-size: 16px;
+  line-height: 20px;
+}
 
- h3 {
-   margin: 18px 0;
-   font-size: 18px;
-   line-height: 20px;
- }
+h3 {
+  margin: 10px 0;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.filter-range {
+  width: 330px;
+/*  margin: 50px auto; */
+  color: #ffffff;
+}
+
+.filter-range-title {
+  margin-bottom: 9px;
+  font-weight: 700;
+  font-size: 16px
+  line-height: 20px;
+
+}
+
+.price-controls {
+  position: relative;
+  height: 36px;
+  margin-bottom: 20px;
+  font-size: 0;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 22px;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.price-controls label {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 38px;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.price-controls .min-price,
+.price-controls .max-price {
+  width: 90px;
+  padding-left: 65px;
+}
+
+.price-controls input {
+  width: 50px;
+  margin: 0;
+  color: inherit;
+  font: inherit;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: -80%;
+  height: 2px;
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -9px;
+  width: 4px;
+  height: 4px;
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+
+.button-transparent {
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  background: trasparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+}
+
+.button-transparent:hover {
+  color: #000000;
+  background: #ffffff;
+}
