--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,41 @@ html,
 body {
   margin: 0;
   padding: 0;
-  text-transform: uppercase;
 }
 
 body {
   padding: 10px;
   font-family: "PT Sans", sans-serif, serif;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
-  background: rgba(154, 224, 250, 1);
+  text-transform: uppercase;
+  min-width: 1200px;
+  background: #ffffff;
+  background-position: top center;
+  background-repeat: no-repeat;
 }
 
-main {
+a {
+  text-decoration: none;
+}
 
+.site-navigation a,
+.visit a,
+.footer-social a,
+.footer-copyright a {
+  color: #000000;
+}
+
+.site-navigation a:hover,
+.site-navigation a:focus,
+.visit a:hover,
+.visit a:focus,
+.footer-social a:hover,
+.footer-social a:focus,
+.footer-copyright a:hover,
+.footer-copyright a:focus {
+  color: rgba(129, 179, 210, 1);
 }
 
 .visually-hidden {
@@ -50,6 +71,7 @@ h3 {
   width: 330px;
 /*  margin: 50px auto; */
   color: #ffffff;
+  background: rgba(154, 224, 250, 1);
 }
 
 .filter-range-title {
@@ -92,6 +114,11 @@ h3 {
 .price-controls .max-price {
   width: 90px;
   padding-left: 65px;
+}
+
+.min-price,
+.max-price {
+  font-weight: 400;
 }
 
 .price-controls input {
@@ -161,4 +188,40 @@ h3 {
 .button-transparent:hover {
   color: #000000;
   background: #ffffff;
+}
+
+.main-navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
+  position: relative;
+}
+
+.site-navigation {
+  width: 1200px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  /* Временно для сетки */
+  min-height: 70px;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.main-footer {
+  background-color: rgba(255 , 255, 255, 0.3);
+}
+
+a.copyright-logo {
+  text-align: center;
+}
+
+object {
+  width: 115px;
+  height: auto;
 }
