--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,17 @@ p {
   background-color: rgba(255, 255, 255, 1.0);
 }
 
+.hotel-seach {
+  height: 291px;
+  text-align: center;
+}
+
+.hotel-seach h1 {
+  padding-top: 56px;
+}
+
+
+
 .main-footer {
   display: flex;
   flex-direction: row;
@@ -177,17 +188,25 @@ p {
 .footer-social ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
+  align-items: center;
+}
+
+.social-button div {
+  width: 46px;
+  height: 44px;
+  background-color: rgba(129, 179, 210, 1.0);
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .social-button {
-  width: 46px;
-  height: 48px;
   margin: 6px;
-  background-color: rgba(129, 179, 210, 1.0);
-  position: relative;
 }
 
-.social-button > img {
-
+.social-button div:hover,
+.social-button div:focus {
+  background-color: rgba(102, 158, 192, 1.0);
 }
